force-app/main/default/objects/B2B_Option__c/B2B_Option__c.object-meta.xml
<CustomObject>
    <label>B2B Option</label>
    <nameField>
        <displayFormat>O-{0000000}</displayFormat>
        <label>B2B Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>