force-app/main/default/objects/B2B_Option__c/fields/B2B_API_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_API_Name__c</fullName>
    <description>This field holds the number associated with the option which is needed for calculating the score.</description>
    <inlineHelpText>This field holds the number associated with the option which is needed for calculating the score.</inlineHelpText>
    <label>API Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>