force-app/main/default/objects/B2B_Option__c/fields/B2B_Image__c.field-meta.xml
<CustomField>
    <fullName>B2B_Image__c</fullName>
    <description>This field holds the Image (emoticon) that needs to be shown.</description>
    <inlineHelpText>This field holds the Image (emoticon) that needs to be shown.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>