force-app/main/default/objects/B2B_Option__c/fields/B2B_Label__c.field-meta.xml
<CustomField>
    <fullName>B2B_Label__c</fullName>
    <description>This field holds the label of the option which needs to be shown.</description>
    <inlineHelpText>This field holds the label of the option which needs to be shown.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>