force-app/main/default/objects/B2B_Option__c/fields/B2B_Question__c.field-meta.xml
<CustomField>
    <fullName>B2B_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the question linked to a particular option.</description>
    <inlineHelpText>This field holds the question linked to a particular option.</inlineHelpText>
    <label>Question</label>
    <referenceTo>B2B_Question__c</referenceTo>
    <relationshipLabel>B2B Option</relationshipLabel>
    <relationshipName>B2B_Option</relationshipName>
    <type>Lookup</type>
</CustomField>